--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,7 +9,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/campgrounds">Campground</a>
-                <a class="nav-link" href="/campgrounds/new">new campground</a>
+                <a class="nav-link" href="/campgrounds/new">New Campground</a>
             </div>
             <div class="navbar-nav ms-auto">
                 <% if(!currentUser) {%>
