--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,9 +8,9 @@
                 <div class="row">
                     <div class="col-md-4">
                         <%if(campground.images.length) {%>
-                            <img crossorigin="anonymous" class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                            <img crossorigin="anonymous" class="img-fluid" width="100%" height="250" alt="" src="<%=campground.images[0].url%>">
                             <% }else {%>
-                                <img  crossorigin="anonymous" class="img-fluid" alt=""
+                                <img  crossorigin="anonymous" class="img-fluid"  width="100%" height="250" alt=""
                                     src="https://res.cloudinary.com/douqbebwk/image/upload/v1600103881/YelpCamp/lz8jjv2gyynjil7lswf4.png">
                                 <% } %>
                     </div>
